# aether

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/aether_api/: Cargo.toml
src-tauri/crates/aether_api/src/: lib.rs
src-tauri/crates/aether_cli/: Cargo.toml
src-tauri/crates/aether_cli/src/: main.rs
src-tauri/crates/aether_core/: Cargo.toml
src-tauri/crates/aether_core/src/: lib.rs
src-tauri/crates/aether_core/src/engine/: integration.rs  mod.rs  renderer.rs  timeline.rs  timeline_renderer.rs  video_decoder.rs
src-tauri/crates/aether_core/src/engine/editing/: effects.rs  export.rs  import.rs  mod.rs  preview.rs  timeline.rs  types.rs
src-tauri/crates/aether_core/src/engine/rendering/: encoder.rs  export.rs  formats.rs  gst_exporter.rs  mod.rs
src-tauri/crates/aether_core/src/engine/tests/: integration_tests.rs  mod.rs  test_utils.rs  unit_tests.rs
src-tauri/crates/aether_core/src/modules/: ai_services.rs  audio_engine.rs  audio_engine_tests.rs  color_grading.rs  color_grading_frame_processor.rs  color_grading_tests.rs  file_manager.rs  file_manager_batch.rs  file_manager_convert.rs  file_manager_tests.rs  mod.rs
src-tauri/crates/aether_types/: Cargo.toml
src-tauri/crates/aether_types/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  page.tsx
src/hooks/: useTimeline.ts
src/styles/: aether_themes.css
src/utils/: ipc.ts
tests/: video_decoder_test.rs
