[package]
name = "aether_core"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "7.1.0"
ffmpeg-sys-next = "7.1.3"
anyhow = "1.0.75"
thiserror = "2.0.15"
log = "0.4.20"
parking_lot = "0.12.1"  # For synchronization primitives
once_cell = "1.18.0"    # For lazy initialization

[dev-dependencies]
env_logger = "0.11.8"   # For test logging
