[package]
name = "aether_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# FFmpeg dependencies for final rendering
ffmpeg-next = "7.1.0"
ffmpeg-sys-next = "7.1.3"

# GStreamer dependencies for core editing engine
gstreamer = { version = "0.21.0", features = ["v1_18"] }
gstreamer-app = "0.21.0"
gstreamer-audio = "0.21.0"
gstreamer-video = "0.21.0"
gstreamer-editing-services = "0.21.0"
gstreamer-pbutils = "0.21.0"
gstreamer-base = "0.21.0"

# Common dependencies
anyhow = "1.0.75"
thiserror = "2.0.15"
log = "0.4.20"
parking_lot = "0.12.1"  # For synchronization primitives
once_cell = "1.18.0"    # For lazy initialization
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0.11.8"   # For test logging
